--- a/package.json
+++ b/package.json
@@ -64,6 +64,8 @@
   },
   "dependencies": {
     "@jill64/attempt": "^0.1.1",
+    "@types/lodash": "^4.14.198",
+    "lodash": "^4.17.21",
     "svelte-loading-spinners": "^0.3.4"
   }
 }
