--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -8,5 +8,6 @@ on:
 jobs:
   e2e-test:
     uses: jill64/workflows/.github/workflows/run-playwright.yml@main
-  auto-merge:
-    uses: jill64/workflows/.github/workflows/auto-merge.yml@main
+  version-bump:
+    uses: jill64/workflows/.github/workflows/version-bump.yml@main
+    secrets: inherit
