fix: package cmd

--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
     "dev": "vite dev",
     "build": "vite build && pnpm package",
     "preview": "pnpm build && vite preview",
-    "package": "svelte-kit sync && npx svelte-package && npx publint",
+    "package": "svelte-kit sync && npx @sveltejs/package && npx publint",
     "check": "svelte-kit sync && npx svelte-check --tsconfig ./tsconfig.json",
     "format": "npx prettier --write . --plugin prettier-plugin-svelte .",
     "lint": "npx prettier --check . --plugin prettier-plugin-svelte . && npx eslint",
