--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "dev": "vite dev",
     "build": "vite build && pnpm package",
     "preview": "pnpm build && vite preview",
+    "prepack": "npm run build",
     "package": "svelte-kit sync && npx @sveltejs/package && npx publint",
     "check": "svelte-kit sync && npx svelte-check --tsconfig ./tsconfig.json",
     "format": "npx prettier --write . --plugin prettier-plugin-svelte .",
