--- a/package.json
+++ b/package.json
@@ -34,9 +34,9 @@
     "preview": "pnpm build && vite preview",
     "prepack": "npm run build",
     "package": "svelte-kit sync && npx @sveltejs/package && npx publint",
-    "check": "svelte-kit sync && npx svelte-check --tsconfig ./tsconfig.json",
+    "check": "svelte-kit sync && npx svelte-check",
     "format": "npx prettier --write . --plugin prettier-plugin-svelte .",
-    "lint": "npx prettier --check . --plugin prettier-plugin-svelte . && npx eslint",
+    "lint": "npx prettier --check . --plugin prettier-plugin-svelte . && npx eslint && npm run check",
     "test": "playwright test"
   },
   "peerDependencies": {
@@ -53,13 +53,13 @@
     "prettier-plugin-svelte": "3.0.3",
     "tslib": "2.6.2",
     "typescript": "5.2.2",
+    "@types/lodash": "4.14.199",
     "vite": "4.4.11"
   },
   "dependencies": {
     "@sveltejs/kit": "1.25.2",
     "svelte": "4.2.1",
     "@jill64/attempt": "1.0.12",
-    "@types/lodash": "4.14.199",
     "lodash": "4.17.21"
   }
 }
