--- a/package.json
+++ b/package.json
@@ -52,15 +52,12 @@
     "eslint-config-prettier": "9.0.0",
     "eslint-plugin-svelte": "2.34.0",
     "prettier-plugin-svelte": "3.0.3",
-    "tslib": "2.6.2",
     "typescript": "5.2.2",
-    "@types/lodash": "4.14.200",
     "vite": "4.5.0"
   },
   "dependencies": {
     "@sveltejs/kit": "1.27.0",
     "svelte": "4.2.2",
-    "@jill64/attempt": "1.1.0",
-    "lodash": "4.17.21"
+    "@jill64/attempt": "1.1.0"
   }
 }
