--- a/package.json
+++ b/package.json
@@ -37,7 +37,7 @@
     "check": "svelte-kit sync && npx svelte-check",
     "format": "npx prettier --write . --plugin prettier-plugin-svelte .",
     "lint": "npx prettier --check . --plugin prettier-plugin-svelte . && npx eslint . && npm run check",
-    "test:e2e": "npx playwright install --with-deps && npx playwright test"
+    "test:e2e": "npx playwright install --with-deps && playwright test"
   },
   "peerDependencies": {
     "@sveltejs/kit": "^1.0.0",
