--- a/package.json
+++ b/package.json
@@ -36,8 +36,8 @@
     "package": "svelte-kit sync && npx @sveltejs/package && npx publint",
     "check": "svelte-kit sync && npx svelte-check",
     "format": "npx prettier --write . --plugin prettier-plugin-svelte .",
-    "lint": "npx prettier --check . --plugin prettier-plugin-svelte . && npx eslint . && npm run check",
-    "test:e2e": "npx playwright install --with-deps && playwright test"
+    "lint": "npx eslint . && npm run check",
+    "test": "npx playwright install --with-deps && playwright test"
   },
   "peerDependencies": {
     "@sveltejs/kit": "^1.0.0",
