Update Svelte adapter to auto in package.json and svelte.config.js

--- a/package.json
+++ b/package.json
@@ -47,7 +47,7 @@
     "@sveltejs/kit": "1.27.3",
     "svelte": "4.2.2",
     "@playwright/test": "1.39.0",
-    "@sveltejs/adapter-static": "2.0.3",
+    "@sveltejs/adapter-auto": "2.1.1",
     "@typescript-eslint/eslint-plugin": "6.9.1",
     "@typescript-eslint/parser": "6.9.1",
     "eslint-plugin-deprecation": "2.0.0",
