--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
   "bugs": "https://github.com/jill64/svelte-pagination/issues",
   "homepage": "https://github.com/jill64/svelte-pagination#readme",
   "files": [
-    "dist"
+    "dist",
+    "!*.spec.*"
   ],
   "exports": {
     ".": {
@@ -30,8 +31,8 @@
   },
   "scripts": {
     "dev": "vite dev",
-    "build": "vite build && pnpm package",
-    "preview": "pnpm build && vite preview",
+    "build": "vite build && npm run package",
+    "preview": "npm run build && vite preview",
     "prepack": "npm run build",
     "package": "svelte-kit sync && npx @sveltejs/package && npx publint",
     "check": "svelte-kit sync && npx svelte-check",
