--- a/package.json
+++ b/package.json
@@ -54,16 +54,14 @@
     "svelte": "^4.0.0"
   },
   "devDependencies": {
+    "@jill64/eslint-config-svelte": "1.0.1",
+    "@jill64/prettier-config": "1.0.0",
+    "@jill64/playwright-config": "2.2.0",
     "@sveltejs/kit": "1.28.0",
     "svelte": "4.2.8",
     "@playwright/test": "1.40.1",
-    "@sveltejs/adapter-auto": "2.1.1",
-    "@typescript-eslint/eslint-plugin": "6.13.2",
-    "@typescript-eslint/parser": "6.13.2",
-    "eslint-plugin-deprecation": "2.0.0",
-    "eslint-config-prettier": "9.1.0",
-    "eslint-plugin-svelte": "2.35.1",
-    "prettier-plugin-svelte": "3.1.2",
+    "@sveltejs/adapter-cloudflare": "2.3.4",
+    "@jill64/sentry-sveltekit-cloudflare": "1.5.0",
     "typescript": "5.3.3",
     "vite": "5.0.7"
   },
