--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@jill64/svelte-pagination",
-  "version": "1.0.4",
+  "version": "2.0.0",
   "type": "module",
   "description": "📖 Pagination component for Svelte",
   "main": "dist/index.js",
@@ -14,9 +14,7 @@
   "bugs": "https://github.com/jill64/svelte-pagination/issues",
   "homepage": "https://github.com/jill64/svelte-pagination#readme",
   "files": [
-    "dist",
-    "!*.spec.*",
-    "!*.test.*"
+    "dist"
   ],
   "exports": {
     ".": {
@@ -45,7 +43,7 @@
     "prepack": "npm run build",
     "package": "svelte-kit sync && npx @sveltejs/package && npx publint",
     "check": "svelte-kit sync && npx svelte-check",
-    "format": "npx prettier --write . --plugin prettier-plugin-svelte .",
+    "format": "npx @jill64/psx",
     "lint": "npx eslint . && npm run check",
     "test": "playwright test"
   },
@@ -55,18 +53,18 @@
   },
   "devDependencies": {
     "@jill64/eslint-config-svelte": "1.0.3",
-    "@jill64/prettier-config": "1.0.0",
+    "@jill64/npm-demo-layout": "0.3.7",
     "@jill64/playwright-config": "2.2.0",
-    "@sveltejs/kit": "1.30.3",
-    "svelte": "4.2.8",
+    "@jill64/prettier-config": "1.0.0",
+    "@jill64/sentry-sveltekit-cloudflare": "1.5.0",
+    "@jill64/svelte-input": "1.6.0",
+    "@jill64/universal-sanitizer": "1.0.0",
     "@playwright/test": "1.40.1",
     "@sveltejs/adapter-cloudflare": "2.3.4",
-    "@jill64/sentry-sveltekit-cloudflare": "1.5.0",
+    "@sveltejs/kit": "1.30.3",
+    "svelte": "4.2.8",
     "typescript": "5.3.3",
     "vite": "5.0.8"
-  },
-  "dependencies": {
-    "@jill64/attempt": "1.1.0"
   },
   "prettier": "@jill64/prettier-config"
 }
