minor: migration to SvelteKit 2

--- a/package.json
+++ b/package.json
@@ -48,23 +48,24 @@
     "test": "playwright test"
   },
   "peerDependencies": {
-    "@sveltejs/kit": "^1.0.0",
+    "@sveltejs/kit": "^2.0.0",
     "svelte": "^4.0.0"
   },
   "devDependencies": {
     "@jill64/eslint-config-svelte": "1.0.3",
-    "@jill64/npm-demo-layout": "0.3.7",
+    "@jill64/npm-demo-layout": "0.4.0",
     "@jill64/playwright-config": "2.2.0",
     "@jill64/prettier-config": "1.0.0",
     "@jill64/sentry-sveltekit-cloudflare": "1.6.1",
-    "@jill64/svelte-input": "1.6.0",
+    "@jill64/svelte-input": "1.6.1",
     "@jill64/universal-sanitizer": "1.0.0",
     "@playwright/test": "1.40.1",
     "@sveltejs/adapter-cloudflare": "3.0.0",
-    "@sveltejs/kit": "1.30.3",
+    "@sveltejs/kit": "2.0.0",
     "svelte": "4.2.8",
     "typescript": "5.3.3",
-    "vite": "5.0.9"
+    "vite": "5.0.9",
+    "@sveltejs/vite-plugin-svelte": "3.0.1"
   },
   "prettier": "@jill64/prettier-config"
 }
