--- a/package.json
+++ b/package.json
@@ -38,13 +38,13 @@
   },
   "scripts": {
     "dev": "vite dev",
-    "build": "vite build && npm run package",
-    "preview": "npm run build && vite preview",
-    "prepack": "npm run build",
-    "package": "svelte-kit sync && npx @sveltejs/package && npx publint",
-    "check": "svelte-kit sync && npx svelte-check",
-    "format": "npx psvx",
-    "lint": "npm run check && npx eslint .",
+    "build": "vite build && bun run package",
+    "preview": "bun run build && vite preview",
+    "prepack": "bun run build",
+    "package": "svelte-kit sync && bunx @sveltejs/package && bunx publint",
+    "check": "svelte-kit sync && bunx svelte-check",
+    "format": "bunx psvx",
+    "lint": "bun run check && bunx eslint .",
     "test": "playwright test"
   },
   "peerDependencies": {
@@ -52,19 +52,18 @@
     "svelte": "^5.0.0"
   },
   "devDependencies": {
-    "@jill64/eslint-config-svelte": "2.0.6",
+    "@jill64/eslint-config-svelte": "2.2.1",
     "@jill64/npm-demo-layout": "2.0.15",
-    "@jill64/playwright-config": "2.4.2",
+    "@jill64/playwright-config": "3.0.0",
     "@jill64/prettier-config": "1.0.0",
     "@jill64/sentry-sveltekit-cloudflare": "2.0.6",
-    "@jill64/svelte-input": "2.0.0",
-    "@jill64/universal-sanitizer": "1.4.1",
-    "@playwright/test": "1.50.1",
-    "@sveltejs/adapter-cloudflare": "5.0.1",
-    "@sveltejs/kit": "2.17.0",
-    "svelte": "5.19.3",
-    "typescript": "5.7.3",
-    "vite": "6.0.11",
+    "@jill64/svelte-input": "2.0.3",
+    "@playwright/test": "1.51.0",
+    "@sveltejs/adapter-cloudflare": "5.0.3",
+    "@sveltejs/kit": "2.19.0",
+    "svelte": "5.23.0",
+    "typescript": "5.8.2",
+    "vite": "6.2.1",
     "@sveltejs/vite-plugin-svelte": "5.0.3"
   },
   "prettier": "@jill64/prettier-config"
